# gxgp

./: .gitignore  LICENSE  README.md  demo.ipynb  dummy.py  palyground.ipynb  playground.ipynb  pyproject.toml  tree.ipynb
gxgp/: __init__.py  draw.py  gp.py  gp_common.py  gp_dag.py  gp_tree.py  gp_util.py  node.py  random.py  utils.py
test/: test_node.py
