[tool.poetry]
    name         = "gxgp"
    version      = "0.1.0"
    description  = "Giovanni's pure-python classes and utilites for implementing a Genetic Programming"
    authors      = ["Giovanni Squillero <squillero@polito.it>"]
    license      = "MIT"
    readme       = "README.md"
    package-mode = true

    [tool.poetry.dependencies]
        python = "^3.12"
        jupyter  = "^1.0.0"
        icecream = "^2.1.3"

[build-system]
    requires      = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"
