#   *        Giovanni Squillero's GP Toolbox
#  / \       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# 2   +      A no-nonsense GP in pure Python
#    / \     To be used as a wireframe when teaching EAs
#  10   11   01URROV Computational Intelligence in PoliTO

[tool.poetry]
name = "gxgp"
version = "0.1.0"
description = "A no-nonsense GP implementation in Python"
authors = ["Giovanni Squillero <squillero@polito.it>"]
license = "MIT"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
# gxgp is pure python! use extras & dev while developing
# poetry install --all-extras --with dev
python = "^3.12"
matplotlib = { version = "^3.9.1", optional = true }
networkx = { version = "^3.3", optional = true }
pydot = { version = "^3.0.1", optional = true }
tqdm = { version = "^4.66.4", optional = true }

[tool.poetry.extras]
plot = ["matplotlib", "networkx", "pydot"]

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
jupyter = "^1.0.0"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
